feat(algolia): tailor content for search

--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -2,6 +2,7 @@
 id: integration-with-cloudflare-workers
 title: Integration with Cloudflare Workers
 sidebar_label: Cloudflare Workers
+type: Guide
 ---
 
 GraphQL Yoga provides you a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
