--- a/website/docs/integrations/integration-with-express.mdx
+++ b/website/docs/integrations/integration-with-express.mdx
@@ -2,6 +2,7 @@
 id: integration-with-express
 title: Integration with Express
 sidebar_label: Express
+type: Guide
 ---
 
 [Express is the most popular web framework for Node.js.](https://expressjs.com/) It is a minimalist framework that provides a robust set of features to handle HTTP on Node.js applications.
