--- a/website/docs/integrations/integration-with-fastify.mdx
+++ b/website/docs/integrations/integration-with-fastify.mdx
@@ -2,6 +2,7 @@
 id: integration-with-fastify
 title: Integration with Fastify
 sidebar_label: Fastify
+type: Guide
 ---
 
 [Fastify is one of the popular HTTP server frameworks for Node.js.](https://www.fastify.io/) It is a very simple, yet powerful framework that is easy to learn and use.
