--- a/website/docs/integrations/integration-with-koa.mdx
+++ b/website/docs/integrations/integration-with-koa.mdx
@@ -2,6 +2,7 @@
 id: integration-with-koa
 title: Integration with Koa
 sidebar_label: Koa
+type: Guide
 ---
 
 [Koa is a new web framework designed by the team behind Express, which aims to be a smaller, more expressive, and more robust foundation for web applications and APIs.](https://koajs.com/)
