--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -2,6 +2,7 @@
 id: integration-with-sveltekit
 title: Integration with SvelteKit
 sidebar_label: SvelteKit
+type: Guide
 ---
 
 [SvelteKit is the fastest way to build svelte apps.](https://kit.svelte.dev/) It is very simple, and let you build frontend & backend in a single place.
