--- a/website/docs/integrations/z-other-environments.mdx
+++ b/website/docs/integrations/z-other-environments.mdx
@@ -2,6 +2,7 @@
 id: z-other-environments
 title: Integration with other environments
 sidebar_label: Other Environments
+type: Guide
 ---
 
 If you have a different environment that you want to integrate with, you can implement your middleware/handler like the example below.
