--- a/website/docs/migration/migration-from-apollo-server.mdx
+++ b/website/docs/migration/migration-from-apollo-server.mdx
@@ -2,6 +2,7 @@
 id: migration-from-apollo-server
 title: Migration from Apollo Server
 sidebar_label: Apollo Server
+type: Guide
 ---
 
 ## Installation
