--- a/website/docs/migration/migration-from-express-graphql.mdx
+++ b/website/docs/migration/migration-from-express-graphql.mdx
@@ -2,6 +2,7 @@
 id: migration-from-express-graphql
 title: Migration from Express GraphQL
 sidebar_label: Express GraphQL
+type: Guide
 ---
 
 ## Installation
