--- a/website/tutorial/advanced/01-authentication.mdx
+++ b/website/tutorial/advanced/01-authentication.mdx
@@ -2,6 +2,7 @@
 id: 01-authentication
 title: Authentication
 sidebar_label: Authentication
+type: Tutorial
 ---
 
 In this section, you're going to implement signup and login functionality that allows your users to authenticate against your GraphQL server.
