--- a/website/tutorial/advanced/02-subscriptions.mdx
+++ b/website/tutorial/advanced/02-subscriptions.mdx
@@ -2,6 +2,7 @@
 id: 02-subscriptions
 title: Subscriptions
 sidebar_label: Subscriptions
+type: Tutorial
 ---
 
 In this section, you'll learn how you can bring realtime functionality into your app by implementing GraphQL subscriptions. The goal is to implement two subscriptions to be exposed by your GraphQL server:
