--- a/website/tutorial/basic/01-project-setup.mdx
+++ b/website/tutorial/basic/01-project-setup.mdx
@@ -2,6 +2,7 @@
 id: 01-project-setup
 title: Project Setup
 sidebar_label: Project Setup
+type: Tutorial
 ---
 
 In this section, you will learn how to create a basic NodeJS project with TypeScript.
