--- a/website/tutorial/basic/04-a-simple-query.mdx
+++ b/website/tutorial/basic/04-a-simple-query.mdx
@@ -2,6 +2,7 @@
 id: 04-a-simple-query
 title: A simple Query
 sidebar_label: A simple Query
+type: Tutorial
 ---
 
 In this section, you are going to implement the first GraphQL object types and fields that provides the functionality of a Hacker News
