--- a/website/tutorial/basic/06-adding-a-database.mdx
+++ b/website/tutorial/basic/06-adding-a-database.mdx
@@ -2,6 +2,7 @@
 id: 06-adding-a-database
 title: Adding a Database
 sidebar_label: Adding a Database
+type: Tutorial
 ---
 
 Your GraphQL API can connect to any kind of data source, such as a remote REST (or even GraphQL) API or database. In this chapter we are covering connecting to an relational SQL database.
