--- a/website/tutorial/basic/07-connecting-server-and-database.mdx
+++ b/website/tutorial/basic/07-connecting-server-and-database.mdx
@@ -2,6 +2,7 @@
 id: 07-connecting-server-and-database
 title: Connecting The Server and Database with Prisma Client
 sidebar_label: Connecting The Server and Database with Prisma Client
+type: Tutorial
 ---
 
 In this section, you're going to learn how to connect your GraphQL server to your database using [Prisma](https://www.prisma.io), which provides the interface to your database. This connection is implemented via [Prisma Client](https://www.prisma.io/docs/reference/tools-and-interfaces/prisma-client).
