--- a/website/tutorial/basic/08-graph-relations.mdx
+++ b/website/tutorial/basic/08-graph-relations.mdx
@@ -2,6 +2,7 @@
 id: 08-graph-relations
 title: Graph Relations
 sidebar_label: Graph Relations
+type: Tutorial
 ---
 
 So far you built a simple GraphQL API for creating and retrieving links.
