--- a/website/tutorial/basic/09-error-handling.mdx
+++ b/website/tutorial/basic/09-error-handling.mdx
@@ -2,6 +2,7 @@
 id: 09-error-handling
 title: Error Handling
 sidebar_label: Error Handling
+type: Tutorial
 ---
 
 In the previous chapter you encountered an error while executing a `Mutation.postCommentOnLink` operation.
