--- a/website/tutorial/basic/10-filtering-and-pagination.mdx
+++ b/website/tutorial/basic/10-filtering-and-pagination.mdx
@@ -2,6 +2,7 @@
 id: 10-filtering-and-pagination
 title: Filtering and Pagination
 sidebar_label: Filtering and Pagination
+type: Tutorial
 ---
 
 This is an exciting section of the tutorial where you'll implement some key features of many robust APIs! The goal is to
