--- a/website/docs/integrations/integration-with-aws-lambda.mdx
+++ b/website/docs/integrations/integration-with-aws-lambda.mdx
@@ -2,6 +2,7 @@
 id: integration-with-aws-lambda
 title: Integration with AWS Lambda
 sidebar_label: AWS Lambda
+type: Guide
 ---
 
 AWS Lambda is a serverless computing platform that makes it easy to build applications that run on the AWS cloud. GraphQL Yoga is platform agnostic so they can fit together easily.
