--- a/website/docs/integrations/integration-with-deno.mdx
+++ b/website/docs/integrations/integration-with-deno.mdx
@@ -2,6 +2,7 @@
 id: integration-with-deno
 title: Integration with Deno
 sidebar_label: Deno
+type: Guide
 ---
 
 GraphQL Yoga provides you a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
