--- a/website/docs/integrations/integration-with-nextjs.mdx
+++ b/website/docs/integrations/integration-with-nextjs.mdx
@@ -2,6 +2,7 @@
 id: integration-with-nextjs
 title: Integration with nextjs
 sidebar_label: Next.js
+type: Guide
 ---
 
 [Next.js](https://nextjs.org/) is a web framework that allows you to build websites very quickly and GraphQL Yoga can be integrated with Next.js easily as [an API Route](https://nextjs.org/docs/api-routes/api-middlewares).
