--- a/website/tutorial/basic/02-getting-started.mdx
+++ b/website/tutorial/basic/02-getting-started.mdx
@@ -2,6 +2,7 @@
 id: 02-getting-started
 title: Getting Started
 sidebar_label: Getting Started
+type: Tutorial
 ---
 
 In this chapter, you will learn about the GraphQL schema:
