--- a/website/tutorial/basic/03-graphql-server.mdx
+++ b/website/tutorial/basic/03-graphql-server.mdx
@@ -2,6 +2,7 @@
 id: 03-graphql-server
 title: GraphQL Server
 sidebar_label: GraphQL Server
+type: Tutorial
 ---
 
 Now that you have a GraphQL schema, and you understand the concept of GraphQL schema and a GraphQL query, it's time to create a real GraphQL server.
