--- a/website/tutorial/basic/05-a-simple-mutation.mdx
+++ b/website/tutorial/basic/05-a-simple-mutation.mdx
@@ -2,6 +2,7 @@
 id: 05-a-simple-mutation
 title: A simple Mutation
 sidebar_label: A simple Mutation
+type: Tutorial
 ---
 
 In this section, you'll learn how to add a `Mutation` field to the GraphQL schema. This mutation field will allow you to _post_ new links
