--- a/website/tutorial/basic/11-summary.mdx
+++ b/website/tutorial/basic/11-summary.mdx
@@ -2,6 +2,7 @@
 id: 11-summary
 title: Summary
 sidebar_label: Summary
+type: Tutorial
 ---
 
 In this tutorial, you learned how to build a simple HackerNews clone GraphQL server from scratch using graphql-yoga!
