--- a/website/docs/features/cors.mdx
+++ b/website/docs/features/cors.mdx
@@ -4,7 +4,7 @@ title: CORS with Yoga
 sidebar_label: CORS
 ---
 
-Yoga comes with CORS support out of the box - CORS can be configured when creating the server either by passing a CORSOptions object, or a builder function that returns the CORSOptions object.
+Yoga comes with CORS (Cross origin resource sharing) support out of the box - CORS can be configured when creating the server either by passing a CORSOptions object, or a builder function that returns the CORSOptions object.
 
 ```ts
 export type CORSOptions =
