Finish your sentence, Danny

--- a/website/docs/features/cors.mdx
+++ b/website/docs/features/cors.mdx
@@ -82,7 +82,7 @@ This will return the same headers as the previous example, but take the `origin`
 
 By default, GraphQL Yoga will return `Access-Control-Allow-Origin: *` when preflight requests are made.
 
-This means cross origin requests from browsers work out of the box - however it may be appropriate to lock
+This means cross origin requests from browsers work out of the box - however it may be appropriate to lock to a specifc domain before deploying to production.
 
 ## Disabling CORS
 
