Remove logger from args, add comment for other args

--- a/website/docs/features/cors.mdx
+++ b/website/docs/features/cors.mdx
@@ -41,6 +41,7 @@ const yogaApp = createServer({
       allowedHeaders: ['X-Custom-Header'],
       methods: ['POST'],
   }
+  /* ...other args */
 })
 ```
 
@@ -93,6 +94,7 @@ import { createServer } from '@graphql-yoga/common'
 
 const yogaApp = createServer({
   cors: false,
+  /* ...other args */
 })
 ```
 
