--- a/website/docs/features/cors.mdx
+++ b/website/docs/features/cors.mdx
@@ -36,11 +36,11 @@ import { createServer } from '@graphql-yoga/common'
 
 const yogaApp = createServer({
   cors: {
-      origin: 'http://localhost:4000',
-      credentials: true,
-      allowedHeaders: ['X-Custom-Header'],
-      methods: ['POST'],
-  }
+    origin: 'http://localhost:4000',
+    credentials: true,
+    allowedHeaders: ['X-Custom-Header'],
+    methods: ['POST'],
+  },
   /* ...other args */
 })
 ```
@@ -60,10 +60,9 @@ You can also pass a function to the cors property, that takes your request and c
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
-import { Request } from 'cross-undici-fetch'
 
 const yogaApp = createServer({
-  cors: (request: Request) => {
+  cors: (request) => {
     const requestOrigin = request.headers.get('origin')
     return {
       origin: requestOrigin,
