--- a/website/docs/migration/migration-from-yoga-v1.mdx
+++ b/website/docs/migration/migration-from-yoga-v1.mdx
@@ -49,8 +49,8 @@ import { GraphQLServer } from 'graphql-yoga'
 import { resolvers } from './schema'
 
 const server = new GraphQLServer({
-  typeDefs: path.join(__dirname, "type-definitions.graphql"),
-  resolvers
+  typeDefs: path.join(__dirname, 'type-definitions.graphql'),
+  resolvers,
 })
 server.start()
 ```
@@ -67,14 +67,90 @@ import { resolvers } from './schema'
 
 const server = createServer({
   schema: {
-    typeDefs: fs.readFileSync(path.join(__dirname, "type-definitions.graphql"), "utf-8"),
-    resolvers
+    typeDefs: fs.readFileSync(
+      path.join(__dirname, 'type-definitions.graphql'),
+      'utf-8',
+    ),
+    resolvers,
   },
 })
 server.start()
 ```
 
 For more complex loading of type-definitions please refer to [`graphql-tools/load-files` ](https://www.graphql-tools.com/docs/schema-loading#load-typedefsdocumentnode-and-resolvers-from-files).
+
+### Schema directives (previously `directiveResolvers`)
+
+In Yoga v1 you could pass a [legacy graphql-tools `directiveResolver` implementation](https://www.graphql-tools.com/docs/schema-directives#what-about-directiveresolvers) to the constructor.
+
+**Yoga v1**
+
+```ts
+import { GraphQLServer } from 'graphql-yoga'
+import { resolvers } from './schema'
+import { uppercaseDirectiveResolverImplementation } from './uppercase-directive-resolver-implementation'
+
+const server = new GraphQLServer({
+  typeDefs: /* GraphQL */ `
+    type Query {
+      hi: String
+    }
+  `,
+  directiveResolvers: uppercaseDirectiveResolverImplementation,
+})
+server.start()
+```
+
+Before deciding upon using schema directives, you should consider whether your custom directive could be instead implemented via a field argument (abstraction).
+
+In Yoga v2 you have to leverage the `mapSchema` API from graphql-tools.
+
+<PackageInstall packages={['@graphql-tools/utils', '@graphql-tools/schema']} />
+
+**Yoga v2**
+
+```ts
+import { Plugin, createServer } from '@graphql-yoga/node'
+import { mapSchema, getDirective, MapperKind } from '@graphql-tools/utils'
+import { makeExecuteableSchema } from '@graphql-tools/schema'
+import { defaultFieldResolver } from 'graphql'
+import { typeDefs, resolvers } from './schema'
+
+let schema = makeExecuteableSchema({
+  typeDefs: [
+    typeDefs,
+    /* GraphQL */ `
+      directive @uppercase on FIELD_DEFINITION
+    `,
+  ],
+  resolvers,
+})
+
+schema = mapSchema(schema, {
+  [MapperKind.OBJECT_FIELD]: (fieldConfig) => {
+    const upperDirective = getDirective(schema, fieldConfig, 'uppercase')?.[0]
+    if (upperDirective) {
+      const { resolve = defaultFieldResolver } = fieldConfig
+      return {
+        ...fieldConfig,
+        resolve: async function (source, args, context, info) {
+          const result = await resolve(source, args, context, info)
+          if (typeof result === 'string') {
+            return result.toUpperCase()
+          }
+          return result
+        },
+      }
+    }
+  },
+})
+
+const server = createServer({
+  schema,
+})
+```
+
+You can learn more about this practise within the [`graphql-tools` schema directives documentation](https://www.graphql-tools.com/docs/schema-directives#using-schema-directives).
 
 ## Context
 
