fix: component name

--- a/website/tutorial/basic/08-graph-relations.mdx
+++ b/website/tutorial/basic/08-graph-relations.mdx
@@ -378,7 +378,7 @@ So far you only fetched single entities within your GraphQL operations.
 
 Let's also add a one to many connection from the Link to Comment object types within the GraphQL schema.
 
-<Introduction>
+<Instruction>
 
 Add the `Link.comments` field to the GraphQL schema definition.
 
@@ -391,7 +391,7 @@ type Link {
 }
 ```
 
-</Introduction>
+</Instruction>
 
 Up next you implement the corresponding `Link.comments` resolver. For this you need to touch the `Link` object types resolver map.
 
