--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -40,3 +40,15 @@ export default yoga
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare-modules)
+
+## Enabling Subscriptions
+
+In order to enable Server Sent Events based subscriptions with Cloudflare Workers, you should add a compatibility flag in your wrangler configuration file like below;
+
+```toml
+compatibility_flags = ["streams_enable_constructors"]
+```
+
+## Debug Logging
+
+You should expose `DEBUG` variable in your environment to enable more verbose logging from GraphQL Yoga application.
