fixed spelling mistakes

--- a/website/tutorial/basic/02-getting-started.mdx
+++ b/website/tutorial/basic/02-getting-started.mdx
@@ -185,7 +185,7 @@ You can ignore the `[Object: null prototype]`. It is just means that the object 
 
 First, the GraphQL `query` operation string was parsed it using the `parse` function of `graphql` - this will create a `DocumentNode` object that can later be executed by GraphQL.
 
-The `DocumentNode` is a abstract syntax tree (AST), an intermediate format that represents the operation string in a more processible friendly way for machines.
+The `DocumentNode` is a abstract syntax tree (AST), an intermediate format that represents the operation string in a more processable friendly way for machines.
 
 The JSON representation of the `DocumentNode` of the `query { hello }` operation looks like the following.
 
@@ -346,7 +346,7 @@ You will learn how to write the corresponding resolver function maps for additio
 
 ### Additional Resources
 
-As mentioned in the begining of this chapter, there are many ways to build and create your GraphQL schema.
+As mentioned in the beginning of this chapter, there are many ways to build and create your GraphQL schema.
 
 Here are a few popular open-source libraries:
 
