--- a/website/tutorial/basic/11-summary.mdx
+++ b/website/tutorial/basic/11-summary.mdx
@@ -17,4 +17,4 @@ This tutorial was brought to you by The Guild. [You can learn more about us here
 
 Feel free to reach out to us via comments on this page or the chat! We are keen to learn about your pain points when building GraphQL servers and find solutions!
 
-The basic Yoga tutorial will soon be expanded with an advanced tutorial that enhances the HackerNews clonse with authentication, subscriptions and more!
+The basic Yoga tutorial will soon be expanded with an advanced tutorial that enhances the HackerNews clone with authentication, subscriptions and more!
