--- a/website/tutorial/basic/09-error-handling.mdx
+++ b/website/tutorial/basic/09-error-handling.mdx
@@ -81,7 +81,7 @@ It includes a full stack-trace of the original error for finding the cause easil
 
 ## Yoga Error Masking
 
-In a production environment, a stack-trace that leaks to the outside world is a potential security threat as that information could be misused by malicous actors.
+In a production environment, a stack-trace that leaks to the outside world is a potential security threat as that information could be misused by malicious actors.
 
 The `extensions` `originalError` field is only present within on an error if the server has been started with the `NODE_ENV` environment variable being set to `development`.
 
@@ -183,7 +183,7 @@ const resolvers = {
 
 </Instruction>
 
-The error code `P2003` indicates a foreign key contraint error. [You can learn more about it in the prisma documentation](https://www.prisma.io/docs/reference/api-reference/error-reference#p2003).
+The error code `P2003` indicates a foreign key constraint error. [You can learn more about it in the prisma documentation](https://www.prisma.io/docs/reference/api-reference/error-reference#p2003).
 You use that code for identifying this edge case of a missing link and then throw a `GraphQLYogaError` with an useful error message instead.
 
 <Instruction>
@@ -223,11 +223,11 @@ You will receive a response with the `Cannot post comment on non-existing link w
 
 As you might have noticed, GraphQLYoga will exclude `GraphQLYogaError` errors thrown within the resolvers from masking the error masking.
 
-That means everytime you want to expose an error to the outside world you should throw an `GraphQLYogaError` error.
+That means every time you want to expose an error to the outside world you should throw an `GraphQLYogaError` error.
 
 At the same time any other unexpected error will automatically be masked from the outside world, bringing you sensible and safe defaults for a GraphQL Yoga production deployment!
 
-### Field Argument sanitazing
+### Field Argument sanitizing
 
 There is actually one more issue within The `Mutation.postCommentOnLink` field resolver.
 
@@ -311,7 +311,7 @@ What the heck is happening now?
 }
 ```
 
-You just enountered another unexpected error that got masked.
+You just encountered another unexpected error that got masked.
 
 Let's analyze the error message.
 
@@ -331,7 +331,7 @@ But why did the previous value `"11a"`, not result in such an error?
 
 In order to clarify that question we need to have a small excursion on how the [`parseInt`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/parseInt) function works.
 
-Basically, there are multiple mathematical numeral systems. The implementation tries to be a bit smart and fault-tolerant. So, instead let's build a quick custom funcion, `parseIntSafe`, that first validates the string contents using a regex.
+Basically, there are multiple mathematical numeral systems. The implementation tries to be a bit smart and fault-tolerant. So, instead let's build a quick custom function, `parseIntSafe`, that first validates the string contents using a regex.
 
 <Instruction>
 
@@ -435,4 +435,4 @@ Remember, when implementing your GraphQL resolver functions, the input arguments
 
 ### Optional Exercise
 
-As an optional exercise for interiorizing the knowledge, you can now also implement validation of the `body` argument of `Mutation.postCommentOnLink` and argument sanitzation for the `Mutation.postLink` field. You wouldn't want anyone to post an empty comment or invalid link, right?
+As an optional exercise for interiorizing the knowledge, you can now also implement validation of the `body` argument of `Mutation.postCommentOnLink` and argument sanitization for the `Mutation.postLink` field. You wouldn't want anyone to post an empty comment or invalid link, right?
