added missing capital letter

--- a/website/tutorial/basic/08-graph-relations.mdx
+++ b/website/tutorial/basic/08-graph-relations.mdx
@@ -68,7 +68,7 @@ npx prisma migrate dev --name "add-user-model"
 
 </Instruction>
 
-his command has now generated your second migration inside of `prisma/migrations`, and you can start to see how this becomes a historical record of how your database evolves over
+This command has now generated your second migration inside of `prisma/migrations`, and you can start to see how this becomes a historical record of how your database evolves over
 time. This script also run the Prisma migration, so your new models and types are ready-to-use.
 
 That might feel like a lot of steps, but the workflow will become automatic by the end of this tutorial!
