added missing word

--- a/website/tutorial/basic/09-error-handling.mdx
+++ b/website/tutorial/basic/09-error-handling.mdx
@@ -10,7 +10,7 @@ In this chapter you will learn the origin of this error and learn how to properl
 
 ### Recap of the encountered error
 
-This the resolver implementation that caused the issue when using a `linkId` that has no counter-part within the database.
+This is the resolver implementation that caused the issue when using a `linkId` that has no counter-part within the database.
 
 ```ts
 const resolvers = {
