--- a/website/tutorial/basic/09-error-handling.mdx
+++ b/website/tutorial/basic/09-error-handling.mdx
@@ -134,7 +134,7 @@ This is great, but now we never know why our request failed 🤔and the error me
 
 Let's change the implementation to expose the much more helpful message `Cannot post comment on non-existing link with id 'X'.` instead of `Unexpected error.`.
 
-For doing, so you will use the `GraphQLYogaError` class that is exported from the `@graphql-yoga/node` package.
+For doing so you will use the `GraphQLYogaError` class that is exported from the `@graphql-yoga/node` package.
 
 <Instruction>
 
