--- a/website/tutorial/basic/08-graph-relations.mdx
+++ b/website/tutorial/basic/08-graph-relations.mdx
@@ -68,7 +68,7 @@ npx prisma migrate dev --name "add-user-model"
 
 </Instruction>
 
-his command has now generated your second migration inside of `prisma/migrations`, and you can start to see how this becomes a historical record of how your database evolves over
+This command has now generated your second migration inside of `prisma/migrations`, and you can start to see how this becomes a historical record of how your database evolves over
 time. This script also run the Prisma migration, so your new models and types are ready-to-use.
 
 That might feel like a lot of steps, but the workflow will become automatic by the end of this tutorial!
@@ -206,7 +206,7 @@ Up next let's also try to create a comment with a `linkId` with no corresponding
 
 <Instruction>
 
-Executing the folloing mutation operation.
+Executing the following mutation operation.
 
 ```graphql
 mutation postCommentOnLink {
@@ -258,7 +258,7 @@ But, since we know that the `linkId` field on the `Comment` model is a foreign k
 
 Let's ignore this ugly error message for now. We will improve upon that within the next chapter.
 
-Instead you will first create resolver for retreiving a comment via it's id.
+Instead you will first create resolver for retrieving a comment via it's id.
 
 #### `Query.comment` resolver
 
@@ -287,7 +287,7 @@ Within the resolver you want to fetch the comment by its id.
 
 <Instruction>
 
-Add the corresponding logic for retriving a comment by its id.
+Add the corresponding logic for retrieving a comment by its id.
 
 ```typescript
 const resolvers = {
@@ -467,7 +467,7 @@ Being able to fetch multiple resources within a single request is on of the main
 
 ### Optional Exercise
 
-As an additonal exercise you can gain more hands on experience by implementing the resolvers for `Comment.link` and `Query.link`.
+As an additional exercise you can gain more hands on experience by implementing the resolvers for `Comment.link` and `Query.link`.
 
 ```graphql
 type Comment {
@@ -481,4 +481,4 @@ type Query {
 
 Start by adding the fields to the schema definitions and then implement the actual field resolvers.
 
-If you are struggeling check out the implementations of the previous resolvers! There is nothing new happening here. You can do it!
+If you are struggling check out the implementations of the previous resolvers! There is nothing new happening here. You can do it!
