Fix docs - replace logger with logging

--- a/website/docs/integrations/integration-with-fastify.mdx
+++ b/website/docs/integrations/integration-with-fastify.mdx
@@ -29,7 +29,7 @@ const graphQLServer = createServer<{
   reply: FastifyReply
 }>({
   // Integrate Fastify logger
-  logger: app.log,
+  logging: app.log,
 })
 
 /**
