--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -36,7 +36,9 @@ import { createServer } from '@graphql-yoga/common'
 
 const yoga = createServer()
 
-export default yoga
+export default {
+  fetch: yoga.fetch,
+}
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare-modules)
