Update docs and examples for file uploads and fastify integration

--- a/website/docs/features/file-uploads.mdx
+++ b/website/docs/features/file-uploads.mdx
@@ -84,10 +84,10 @@ import {
 } from 'nexus'
 import { createServer } from '@graphql-yoga/node'
 
-const UploadScalar = scalarType({
-  name: 'Upload',
-  asNexusMethod: 'upload',
-  description: 'The `Upload` scalar type represents a file upload.',
+const FileScalar = scalarType({
+  name: 'File',
+  asNexusMethod: 'file',
+  description: 'The `File` scalar type represents a file upload.',
   sourceType: 'File',
 })
 
@@ -98,7 +98,7 @@ const greetings = queryField('greetings', {
 
 const readTextFile = mutationField('readTextFile', {
   type: 'String',
-  args: { file: nonNull(arg({ type: 'Upload' })) },
+  args: { file: nonNull(arg({ type: 'File' })) },
   resolve: async (parent, { file }, ctx) => {
     const textContent = await file.text()
     return textContent
@@ -106,7 +106,7 @@ const readTextFile = mutationField('readTextFile', {
 })
 
 const schema = makeSchema({
-  types: [UploadScalar, greetings, readTextFile],
+  types: [FileScalar, greetings, readTextFile],
 })
 
 const server = createServer({
@@ -117,7 +117,7 @@ const server = createServer({
 server.start()
 ```
 
-## Disabling Multipart Request Processing
+## Disabling Multipart/File Upload Processing
 
 If you want to disable multipart request processing for some reason, you can pass `multipart: false` to prevent Yoga from handling multipart requests.
 
