Fix copy&pasta error in an example

--- a/website/docs/features/subscriptions.mdx
+++ b/website/docs/features/subscriptions.mdx
@@ -329,7 +329,7 @@ const server = createServer({
         hello: () => 'world',
       },
       Subscription: {
-        globalCounter: {
+        randomNumber: {
           // subscribe to the randomNumber event
           subscribe: () => pubSub.subscribe('randomNumber'),
           resolve: (payload) => payload,
