Use correct URL for CF Workers video

--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -18,7 +18,7 @@ You will want to use the package `@graphql-yoga/common` which has an agnostic HT
 <iframe
   width="100%"
   height="400"
-  src="https://www.youtube.com/embed/1EBphPltkA4"
+  src="https://www.youtube.com/embed/xibiwSXMLsc"
   title="Using GraphQL Yoga with Cloudflare Workers, and KV"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
