--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -38,7 +38,7 @@ import { createServer } from '@graphql-yoga/common'
 
 const server = createServer()
 
-server.start()
+self.addEventListener('fetch', server)
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/service-worker)
