--- a/website/docs/integrations/integration-with-nestjs.mdx
+++ b/website/docs/integrations/integration-with-nestjs.mdx
@@ -7,7 +7,7 @@ type: Guide
 
 [Nest (Nest JS)](https://nestjs.com/) is a progressive Node.js framework for building efficient, reliable and scalable server-side applications.
 
-GraphQL Yoga provides its own Nest GraphQL Driver that support building standalone GraphQL APIs.
+GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypoly/graphql-yoga-nestjs) that support building standalone GraphQL APIs and Federation GraphQL APIs (Gateway and Services).
 
 <p>&nbsp;</p>
 
@@ -172,4 +172,10 @@ More information [on the dedicated example](https://github.com/charlypoly/graphq
 
 <p>&nbsp;</p>
 
-Apollo Federation support is coming soon!
+## Apollo Federation
+
+Yoga Nest GraphQL integration supports building Apollo Federation Gateway and Services through the `YogaGatewayDriver` and `YogaFederationDriver` drivers.
+
+A complete example [is available in the repository](https://github.com/charlypoly/graphql-yoga-nestjs/tree/master/examples/graphql-federation-code-first).
+
+> ⚠️ `YogaGatewayDriver` and `YogaFederationDriver` drivers should be used with `graphql@15`.
