Urql Exchange & Apollo Client Link

--- a/website/v3/docs/features/subscriptions.mdx
+++ b/website/v3/docs/features/subscriptions.mdx
@@ -128,133 +128,35 @@ eventsource.onmessage = function (event) {
 
 ### Client usage with Apollo
 
-We can create an `SSELink` to use with Apollo Client.
-In order to send non Subscription operations via the default HTTP protocol, you can use `split` from the Apollo Link package.
-[For more information please refer to the Apollo Link documentation](https://www.apollographql.com/docs/react/api/link/introduction).
+You need to use `YogaLink` from `@graphql-yoga/apollo-link` package to use subscriptions together with file uploads in Apollo Client.
+
+<PackageInstall packages={['@graphql-yoga/urql-exchange']} />
 
 ```ts
-import {
-  ApolloLink,
-  Operation,
-  FetchResult,
-  Observable,
-  ApolloClient,
-  InMemoryCache,
-  gql,
-} from '@apollo/client/core'
-import { split } from '@apollo/client/link/core'
-import { HttpLink } from '@apollo/client/link/http'
-import { print, getOperationAST } from 'graphql'
+import { ApolloClient, InMemoryCache } from '@apollo/client/core'
+import { YogaLink } from '@graphql-yoga/apollo-link'
 
-type SSELinkOptions = EventSourceInit & { uri: string }
-
-class SSELink extends ApolloLink {
-  constructor(private options: SSELinkOptions) {
-    super()
-  }
-
-  public request(operation: Operation): Observable<FetchResult> {
-    const url = new URL(this.options.uri)
-    url.searchParams.append('query', print(operation.query))
-    url.searchParams.append(
-      'extensions',
-      JSON.stringify(operation.operationName),
-    )
-    url.searchParams.append('variables', JSON.stringify(operation.variables))
-    if (operation.extensions) {
-      url.searchParams.append(
-        'extensions',
-        JSON.stringify(operation.extensions),
-      )
-    }
-
-    return new Observable((sink) => {
-      const eventsource = new EventSource(url.toString(), this.options)
-      eventsource.onmessage = function (event) {
-        const data = JSON.parse(event.data)
-        sink.next(data)
-        if (eventsource.readyState === 2) {
-          sink.complete()
-        }
-      }
-      eventsource.onerror = function (error) {
-        sink.error(error)
-      }
-      return () => eventsource.close()
-    })
-  }
-}
-
-const uri = 'http://localhost:4000/graphql'
-
-const sseLink = new SSELink({
-  uri,
+const client = new ApolloClient({
+  link: new YogaLink({
+    endpoint: 'http://localhost:4000/graphql',
+  }),
+  cache: new InMemoryCache(),
 })
-
-const httpLink = new HttpLink({
-  uri,
-})
-
-const link = split(
-  ({ query, operationName }) => {
-    const definition = getOperationAST(query, operationName)
-
-    return (
-      definition?.kind === 'OperationDefinition' &&
-      definition.operation === 'subscription'
-    )
-  },
-  sseLink,
-  httpLink,
-)
 ```
 
 ### Client usage with Urql
 
-Here is an example with Urql's `subscriptionExchange`
+You need to install `@urql/exchange-graphql` for GraphQL Yoga, and use `yogaExchange` from that package.
 
-`urql-sse.ts`
+<PackageInstall packages={['@graphql-yoga/urql-exchange']} />
 
 ```ts
-import { createClient, defaultExchanges, subscriptionExchange } from 'urql'
+import { createClient, defaultExchanges } from 'urql'
+import { yogaExchange } from '@graphql-yoga/urql-exchange'
 
 const client = createClient({
   url: 'http://localhost:4000/graphql',
-  exchanges: [
-    ...defaultExchanges,
-    subscriptionExchange({
-      forwardSubscription(operation) {
-        const url = new URL('http://localhost:4000/graphql')
-        url.searchParams.append('query', operation.query)
-        if (operation.variables) {
-          url.searchParams.append(
-            'variables',
-            JSON.stringify(operation.variables),
-          )
-        }
-        return {
-          subscribe: (sink) => {
-            const eventsource = new EventSource(url.toString(), {
-              withCredentials: true, // This is required for cookies
-            })
-            eventsource.onmessage = function (event) {
-              const data = JSON.parse(event.data)
-              sink.next(data)
-              if (eventsource.readyState === 2) {
-                sink.complete()
-              }
-            }
-            eventsource.onerror = function (error) {
-              sink.error(error)
-            }
-            return {
-              unsubscribe: () => eventsource.close(),
-            }
-          },
-        }
-      },
-    }),
-  ],
+  exchanges: [...defaultExchanges, yogaExchange()],
 })
 ```
 
