--- a/website/docs/features/error-masking.mdx
+++ b/website/docs/features/error-masking.mdx
@@ -16,7 +16,7 @@ Let's setup a simple schema that calls a remote service that is unavailable.
 
 ```ts
 import { createServer } from '@graphql-yoga/node'
-import { fetch } from 'cross-undici-fetch'
+import { fetch } from '@whatwg-node/fetch'
 
 // Provide your schema
 const server = createServer({
@@ -99,7 +99,7 @@ node server.js
 
 ```ts
 import { createServer } from '@graphql-yoga/node'
-import { fetch } from 'cross-undici-fetch'
+import { fetch } from '@whatwg-node/fetch'
 
 // Provide your schema
 const server = createServer({
