--- a/website/docs/features/subscriptions.mdx
+++ b/website/docs/features/subscriptions.mdx
@@ -83,6 +83,20 @@ data: {"data":{"countdown":1}}
 data: {"data":{"countdown":0}}
 ```
 
+> Watch [Episode #52 of `graphql.wtf`](https://graphql.wtf/episodes/52-graphql-subscriptions-with-server-sent-events) for a quick introduction to using GraphQL Subscriptions with Server Sent Events:
+
+<br />
+
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/oZtTut7QsZ8"
+  title="GraphQL Subscriptions with Server Sent Events"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
+
 ## Handling subscriptions on the client
 
 WHATWG standard [`EventSource`](https://developer.mozilla.org/en-US/docs/Web/API/EventSource) can be used without any extra packages to handle SSE.
