--- a/website/docs/quick-start.mdx
+++ b/website/docs/quick-start.mdx
@@ -76,3 +76,13 @@ const server = createServer({
 // start the server and explore http://localhost:4000/graphql
 server.start()
 ```
+
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/_-B6QIFSSwo"
+  title="GraphQL Yoga 2"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
